# higher-school-of-poker

./: .coverage  .coveragerc  .flake8  .gitignore  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
backend/: .env.example  Dockerfile  __init__.py  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2f4e9b0a7f1a_add_user_balance.py  5c1c0a8f2c3d_add_game_history_tables.py  8da2d054d53f_add_player_stats.py  bd88730d13be_add_users.py  cb21ea9567ea_init.py
backend/auth/: hashing.py  jwt_tokens.py
backend/database/: __init__.py  session.py
backend/models/: __init__.py  finished_game.py  player_game.py  player_stats.py  user.py
backend/poker_engine/: cards.py  deck.py  game_state.py  player_state.py  table.py  test.py
backend/rest/: errors.py  main.py
backend/rest/api/: auth.py  deps.py  health.py  middleware.py  stats.py  table.py  users.py
backend/rest/core/: config.py
backend/rest/schemas/: users.py
backend/rest_api/: errors.py  main.py
backend/rest_api/api/: auth.py  deps.py  health.py  middleware.py  router.py  stats.py  table.py  users.py
backend/rest_api/core/: config.py
backend/rest_api/schemas/: auth.py  error.py  stats.py  table.py  (+1 more)
backend/services/: game_service.py  table_service.py  table_store.py
backend/temp_info/: tables_list.json
backend/tests/: auth.py  table.py  test_auth.py  test_poker_engine.py  test_stats.py  test_table_service.py  test_ws_reveal.py
backend/ws_api/: router.py  tables.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
(+51 files in other folders)
