[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Газизов Вячеслав",email = "vrgazizov@edu.hse.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic (>=1.17.2,<2.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "fastapi (>=0.125.0,<0.126.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "websockets (>=15.0.0, <= 15.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
