[tool.poetry]
name = "hsepoker"
version = "0.1.0"
description = ""
authors = [
    "Круковер Денис <dikrukover@edu.hse.ru>",
    "Морозова Яна <immorozova@edu.hse.ru>",
    "Канаев Сергей <sdkanaev@edu.hse.ru>",
    "Газизов Вячеслав <vrgazizov@edu.hse.ru>",
    "Колесников Никита <nekolesnikov@edu.hse.ru>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.125.0"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.45"
asyncpg = "^0.31.0"
alembic = "^1.17.2"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.2.1"
websockets = "^15.0.1"
python-multipart = "^0.0.21"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.5.0"
jinja2 = "^3.1.6"
greenlet = "^3.3.0"
jwt = "^1.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
httpx = "^0.28.1"
aiosqlite = "^0.22.0"
flake8 = "^7.3.0"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
